[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/WorldMap.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Map.gd" type="Script" id=2]
[ext_resource path="res://Objects/Cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/IslandSpawner.gd" type="Script" id=4]
[ext_resource path="res://Scripts/CameraTarget.gd" type="Script" id=5]
[ext_resource path="res://Scripts/InputManager.gd" type="Script" id=6]
[ext_resource path="res://Scripts/ButtonSpawner.gd" type="Script" id=7]
[ext_resource path="res://Sprites/ElementSymbols/Fire.png" type="Texture" id=8]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=9]
[ext_resource path="res://Sprites/Icons/Options.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Icons/Bag.png" type="Texture" id=11]
[ext_resource path="res://Scripts/TopUI.gd" type="Script" id=12]
[ext_resource path="res://Sprites/Icons/Go.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Icons/Back.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 270, 300 )

[node name="Map" type="Node2D"]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="WorldMap" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="CameraTarget" type="Position2D" parent="."]
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="CameraTarget"]
anchor_mode = 0
current = true

[node name="Tween" type="Tween" parent="CameraTarget"]

[node name="Cursor" parent="." instance=ExtResource( 3 )]
position = Vector2( 120, 152 )
scale = Vector2( 1, 1 )

[node name="IslandSpawner" type="Node2D" parent="."]
show_behind_parent = true
script = ExtResource( 4 )

[node name="InputManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="InputManager"]

[node name="TouchScreenButton" type="TouchScreenButton" parent="InputManager/CanvasLayer"]
position = Vector2( -128, 128 )
shape = SubResource( 1 )
action = "ui_accept"

[node name="RightBound" type="ColorRect" parent="InputManager/CanvasLayer"]
margin_left = 272.0
margin_top = -176.0
margin_right = 542.0
margin_bottom = 736.0
rect_pivot_offset = Vector2( -936, 320 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBound" type="ColorRect" parent="InputManager/CanvasLayer"]
margin_left = -272.0
margin_top = -176.0
margin_right = -2.0
margin_bottom = 736.0
rect_pivot_offset = Vector2( -936, 320 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBound" type="ColorRect" parent="InputManager/CanvasLayer"]
margin_left = -40.0
margin_top = -176.0
margin_right = 320.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomBound" type="ColorRect" parent="InputManager/CanvasLayer"]
margin_left = -56.0
margin_top = 480.0
margin_right = 304.0
margin_bottom = 736.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSpawner" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="TopUI" type="Control" parent="UILayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UILayer/TopUI"]
margin_right = 270.0
margin_bottom = 64.0

[node name="ColorRect2" type="ColorRect" parent="UILayer/TopUI"]
margin_left = 4.0
margin_right = 266.0
margin_bottom = 60.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="UILayer/TopUI"]
margin_left = 4.0
margin_right = 266.0
margin_bottom = 60.0

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/TopUI/MarginContainer"]
margin_right = 262.0
margin_bottom = 60.0

[node name="MenuButton" type="MenuButton" parent="UILayer/TopUI/MarginContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 60.0
icon = ExtResource( 10 )

[node name="Button" type="Button" parent="UILayer/TopUI/MarginContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 92.0
margin_bottom = 60.0
icon = ExtResource( 11 )
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/TopUI/MarginContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 96.0
margin_bottom = 60.0

[node name="Remaining" type="Label" parent="UILayer/TopUI/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 7.0
margin_bottom = 21.0
size_flags_horizontal = 0
size_flags_vertical = 6

[node name="Level" type="Label" parent="UILayer/TopUI/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 39.0
margin_bottom = 53.0
size_flags_horizontal = 0
size_flags_vertical = 6

[node name="UI" type="Control" parent="UILayer"]
margin_top = 480.0
margin_right = 270.0
margin_bottom = 728.0
mouse_default_cursor_shape = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UILayer/UI"]
show_behind_parent = true
margin_right = 270.0
margin_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="UILayer/UI"]
show_behind_parent = true
margin_left = 4.0
margin_top = 4.0
margin_right = 266.0
margin_bottom = 248.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UILayer/UI"]
margin_left = 8.0
margin_top = 8.0
margin_right = 262.0
margin_bottom = 248.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/UI/MarginContainer"]
margin_right = 254.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/UI/MarginContainer/VBoxContainer"]
margin_right = 254.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 0 )

[node name="Icon" type="TextureRect" parent="UILayer/UI/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 8 )
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/UI/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 166.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="Label" parent="UILayer/UI/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 60.0
margin_bottom = 14.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
text = "Fire"

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/UI/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 98.0
margin_bottom = 32.0

[node name="Level" type="Label" parent="UILayer/UI/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 14.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
text = "Level:"

[node name="LevelValue" type="Label" parent="UILayer/UI/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 98.0
margin_bottom = 14.0
text = "value"

[node name="Go" type="Button" parent="UILayer/UI/MarginContainer/VBoxContainer"]
margin_left = 178.0
margin_top = 68.0
margin_right = 254.0
margin_bottom = 106.0
focus_mode = 0
size_flags_horizontal = 8
enabled_focus_mode = 0
icon = ExtResource( 13 )
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="UILayer/UI/MarginContainer/VBoxContainer"]
margin_left = 178.0
margin_top = 110.0
margin_right = 254.0
margin_bottom = 148.0
focus_mode = 0
size_flags_horizontal = 12
toggle_mode = true
enabled_focus_mode = 0
icon = ExtResource( 14 )
flat = true

[connection signal="numIslands" from="IslandSpawner" to="." method="set_current_islands"]
[connection signal="numIslands" from="IslandSpawner" to="ButtonSpawner" method="spawn_button"]
